# custom-user-verifier

./: .env.example  LICENSE  README.md  app.py  pyproject.toml
static/: style.css
templates/: activated.html  admin.html  admin_login.html  error.html  index.html  success.html
