[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-user-verifier"
version = "0.1.0"
description = "Custom User Verifier Flask server for Arcade.dev"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "arcadepy",
    "python-dotenv",
    "pyjwt",
]

[project.scripts]
custom_verifier = "app:main"

[tool.setuptools]
py-modules = ["app"]
